crates/rome_js_formatter/tests/specs/prettier/js/record/shorthand.js.snap
---
source: crates/rome_js_formatter/tests/prettier_tests.rs
---

# Input

```js
const url = "https://github.com/tc39/proposal-record-tuple";
const record = #{ url }
console.log(record.url) // https://github.com/tc39/proposal-record-tuple
```


# Prettier differences

```diff
--- Prettier
+++ Rome
@@ -1,3 +1,6 @@
 const url = "https://github.com/tc39/proposal-record-tuple";
-const record = #{ url };
+const record = #;
+{
+  url;
+}
 console.log(record.url); // https://github.com/tc39/proposal-record-tuple
```

# Output

```js
const url = "https://github.com/tc39/proposal-record-tuple";
const record = #;
{
  url;
}
console.log(record.url); // https://github.com/tc39/proposal-record-tuple
```


# Errors
```
error[SyntaxError]: expected an identifier but instead found '{'
  ┌─ shorthand.js:2:17
  │
2 │ const record = #{ url }
  │                 ^ Expected an identifier here

error[SyntaxError]: Private names are only allowed on the left side of a 'in' expression
  ┌─ shorthand.js:2:16
  │
2 │ const record = #{ url }
  │                ^

error[SyntaxError]: Expected a semicolon or an implicit semicolon after a statement, but found none
  ┌─ shorthand.js:2:17
  │
2 │ const record = #{ url }
  │ ----------------^ An explicit or implicit semicolon is expected here...
  │ │                
  │ ...Which is required to end this statement


```


